k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app
  namespace: notes-app
  labels:
    app: notes-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      containers:
        - name: notes-app
          image: notes-app:v1
          imagePullPolicy: IfNotPresent
          command:
            - sh
            - -c
            - python manage.py migrate --noinput && gunicorn notesapp.wsgi --bind 0.0.0.0:8000
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: notes-app
  namespace: notes-app
spec:
  type: NodePort
  selector:
    app: notes-app
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
